--- a/index.html
+++ b/index.html
@@ -20,6 +20,56 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div class="tabs">
+
+      <a id="tab1" href="" class="tabs__label active"><span>UK news</span></a>
+      <a id="tab2" href="" class="tabs__label"><span>Football</span></a>
+      <a id="tab3" href="" class="tabs__label"><span>Travel</span></a>
+
+      <div id="tab-content1" class="tabs__content">
+        <ul>
+          <li class="article">
+            <a href="#" class="article__link">
+              <h1 class="article__title">This is a title</h1>
+              <p class="article__text">Lorem ipsum dolor sit amet.</p>
+            </a>
+          </li>
+
+          <li class="article">
+            <a href="#" class="article__link">
+              <h1 class="article__title">This is a title</h1>
+              <p class="article__text">Lorem ipsum dolor sit amet.</p>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+
+      <div id="tab-content2" class="tabs__content">
+        <ul>
+          <li class="article">
+            <a href="#" class="article__link">
+              <h1 class="article__title">This is a title</h1>
+              <p class="article__text">Lorem ipsum dolor sit amet.</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div id="tab-content3" class="tabs__content">
+        <ul>
+          <li class="article">
+            <a href="#" class="article__link">
+              <h1 class="article__title">This is a title</h1>
+              <p class="article__text">Lorem ipsum dolor sit amet.</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.0.3.min.js"><\/script>')</script>
     <script src="js/main.js"></script>
