--- a/js/specrunner.html
+++ b/js/specrunner.html
@@ -12,9 +12,17 @@
     <script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
     <script src="lib/jasmine-2.4.1/boot.js"></script>
 
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://cdn.jsdelivr.net/jasmine.jquery/2.0.3/jasmine-jquery.js"></script>
+
     <!-- include source files here... -->
+    <script src="src/validator.js"></script>
+    <script src="src/parser.js"></script>
 
     <!-- include spec files here... -->
+    <script src="spec/data.js"></script>
+    <script src="spec/validator-spec.js"></script>
+    <script src="spec/parser-spec.js"></script>
 
   </head>
 
