Add the user interface

--- a/js/specrunner.html
+++ b/js/specrunner.html
@@ -21,6 +21,7 @@
     <script src="src/parser.js"></script>
     <script src="src/logger.js"></script>
     <script src="src/connection.js"></script>
+    <script src="src/ui.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/data.js"></script>
@@ -28,6 +29,7 @@
     <script src="spec/parser-spec.js"></script>
     <script src="spec/logger-spec.js"></script>
     <script src="spec/connection-spec.js"></script>
+    <script src="spec/ui-spec.js"></script>
 
   </head>
 
